--- a/JackTimingApp/JackTimingApp.UWP/JackTimingApp.UWP.csproj
+++ b/JackTimingApp/JackTimingApp.UWP/JackTimingApp.UWP.csproj
@@ -148,8 +148,17 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="reactiveui-xamforms">
+      <Version>8.0.0-alpha0109</Version>
+    </PackageReference>
+    <PackageReference Include="SkiaSharp">
+      <Version>1.59.2</Version>
+    </PackageReference>
+    <PackageReference Include="SkiaSharp.Views.Forms">
+      <Version>1.59.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.121934" />
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.1"/>
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.0.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\JackTimingApp\JackTimingApp.csproj">
