--- a/JackTimingApp/JackTimingApp.iOS/JackTimingApp.iOS.csproj
+++ b/JackTimingApp/JackTimingApp.iOS/JackTimingApp.iOS.csproj
@@ -119,6 +119,15 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="reactiveui-xamforms">
+      <Version>8.0.0-alpha0109</Version>
+    </PackageReference>
+    <PackageReference Include="SkiaSharp">
+      <Version>1.59.2</Version>
+    </PackageReference>
+    <PackageReference Include="SkiaSharp.Views.Forms">
+      <Version>1.59.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.121934" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
